--- a/src/scss/abstracts/_globals.scss
+++ b/src/scss/abstracts/_globals.scss
@@ -17,6 +17,10 @@ header a {
   color: $accent-color;
 }
 
+section{
+  padding: 50px 0;
+}
+
 section a {
   color: $primary-color;
 }
@@ -25,6 +29,11 @@ body {
   margin: 0;
 }
 
+
+
+
+
+// wraps the whole website
 .wrapper {
   width: 93%;
   margin: auto;
@@ -33,5 +42,10 @@ body {
 
 // containerizes selected sections
 .container{
-  padding: 50px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.img-fluid{
+  max-width: 100%;
 }
