make cta section

--- a/src/scss/homepage.scss
+++ b/src/scss/homepage.scss
@@ -259,3 +259,45 @@ header {
     }
   }
 }
+
+
+/*  Call To Action Section  */
+.cta{
+  background: linear-gradient(rgba(2, 2, 2, 0.6), rgba(0, 0, 0, 0.8)), url('../img/cta-bg.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+
+  .container{
+    text-align: center;
+    color: $accent-color;
+
+    .title{
+      margin: 0;
+      font-size: 2rem;
+    }
+
+    .desc{
+      margin: 15px 0;
+      font-weight: 500;
+    }
+
+    .cta-btn{
+      // @include Button();
+      // font-weight: 500;
+      // font-size: 1.10rem;
+      @include Button($border: solid 2px #fff);
+      @include Transition;
+      cursor: pointer;
+      font-size: 1.1rem;
+      font-weight: 600;
+      letter-spacing: 2px;
+
+      &:hover {
+        background-color: #4eb478;
+        border-color: #4eb478;
+      }
+    }
+
+  }
+}
