--- a/src/scss/homepage.scss
+++ b/src/scss/homepage.scss
@@ -298,6 +298,52 @@ header {
         border-color: #4eb478;
       }
     }
+  }
+}
 
+/*  Services Section  */
+
+.services{
+  .info{
+    padding: 30px 0;
+    text-align: center;
+    position: relative;
+    
+    span{
+      font-size: 3rem;
+      font-weight: bold;
+      color: #f4f4f4;
+      text-transform: uppercase;
+      
+      position: absolute;
+      top: 30px;
+      left: 0;
+      right:0;
+      line-height: 0;
+      z-index: -1;
+    }
+
+    >.title{
+      font-size: 2rem;
+      color: #4eb478;
+
+      margin-top: 0;
+    }
+  }
+
+  .row{
+    display: flex;
+    flex-wrap: wrap;
+  
+    &-item{
+      padding: 25px;
+      width: 50%;
+    }
+
+    .title,
+    .desc{
+      margin-top: 0;
+      color: #444444;
+    }
   }
 }
