--- a/src/scss/homepage.scss
+++ b/src/scss/homepage.scss
@@ -19,6 +19,26 @@
   border-radius: calc($btn-height/2);
 }
 
+@mixin Text-Shadow(){
+  padding: 30px 0;
+  text-align: center;
+  position: relative;
+  
+  span{
+    font-size: 3rem;
+    font-weight: bold;
+    color: #f4f4f4;
+    text-transform: uppercase;
+    
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right:0;
+    line-height: 0;
+    z-index: -1;
+  }
+}
+
 
 /*  Header  */
 
@@ -305,23 +325,24 @@ header {
 
 .services{
   .info{
-    padding: 30px 0;
-    text-align: center;
-    position: relative;
+    @include Text-Shadow();
+    // padding: 30px 0;
+    // text-align: center;
+    // position: relative;
     
-    span{
-      font-size: 3rem;
-      font-weight: bold;
-      color: #f4f4f4;
-      text-transform: uppercase;
+    // span{
+    //   font-size: 3rem;
+    //   font-weight: bold;
+    //   color: #f4f4f4;
+    //   text-transform: uppercase;
       
-      position: absolute;
-      top: 30px;
-      left: 0;
-      right:0;
-      line-height: 0;
-      z-index: -1;
-    }
+    //   position: absolute;
+    //   top: 30px;
+    //   left: 0;
+    //   right:0;
+    //   line-height: 0;
+    //   z-index: -1;
+    // }
 
     >.title{
       font-size: 2rem;
@@ -334,7 +355,7 @@ header {
   .row{
     display: flex;
     flex-wrap: wrap;
-  
+
     &-item{
       padding: 25px;
       width: 50%;
@@ -344,6 +365,65 @@ header {
     .desc{
       margin-top: 0;
       color: #444444;
+    }
+  }
+}
+
+/*  Portfolio Section  */
+
+.portfolio{
+  .info{
+    @include Text-Shadow();
+
+    .title{
+      font-size: 2rem;
+      color: #4eb478;
+
+      margin-top: 0;
+    }
+
+    .desc{
+      color: #444444;
+    }
+  }
+
+  .controls{
+    margin-bottom: 25px;
+    text-align: center;
+    
+    button{
+      @include Transition();
+      @include Button(#000, #eaeaea);
+      border-radius: 2rem;
+      font-weight: 500;
+      text-transform: uppercase;
+
+      &:hover{
+        color: #4eb478;
+      }
+    }
+  }
+
+  .row{
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+
+    .wrap{
+
+      display: flex;
+      margin: auto;
+      position: relative;
+
+      .portfolio-info,
+      .portfolio-links{
+        position: absolute;
+      }
+    }
+
+    &-item{
+      padding: 12px;
+      width: (100% / 3);
     }
   }
 }
