--- a/src/scss/homepage.scss
+++ b/src/scss/homepage.scss
@@ -484,6 +484,7 @@ header {
 
   .cards{
     display: flex;
+    // flex-wrap: wrap;
     gap: 25px;
     border-radius: 7px;
     img,.card-info{
@@ -496,7 +497,9 @@ header {
       .card-info{
         @include Transition();
         opacity: 0;
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.8) 20%, rgba(0, 212, 255, 0) 100%);
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%,
+        rgba(0, 0, 0, 0.8) 20%,
+        rgba(0, 212, 255, 0) 100%);
         text-align: center;
         position: absolute;
         inset: 0 0 0 0;
@@ -521,9 +524,90 @@ header {
           opacity: 1;
           transition: 0.4s;
         }
-
       }
-      
+    }
+  }
+}
+
+/*  Pricing Section  */
+
+.pricing{
+  .info{
+    @include Text-Shadow();
+
+    .title{
+      font-size: 2rem;
+      color: #4eb478;
+
+      margin-top: 0;
+    }
+
+    .desc{
+      color: #444444;
+    }
+  }
+
+  .row{
+    display: flex;
+    justify-content: space-evenly;
+
+    &-item{
+      padding: 50px;
+      box-shadow: 2px 2px 12px #8888886b;
+      text-align: center;
+      width: (100% / 3);
+
+      h3{
+        font-size: 1.8rem;
+        font-weight: 300;
+      }
+  
+      h4{
+        font-family: sans-serif;
+        font-size: 3rem;
+        font-weight: 400;
+        color: #4eb478;
+  
+        margin: 0 0 25px 0;
+  
+        span{
+          display: block;
+          color: #bababa;
+  
+          font-size: 1.2rem;
+        }
+      }
+  
+      ul {
+        padding: 0;
+        margin: 0;
+        margin-bottom: 25px;
+        text-align: left;
+        
+        li{
+          padding: 10px 0;
+        }
+      }
+  
+      button{
+        @include Button(#000, #fff, 0.8rem, 2rem, 2px #dddddd solid);
+        font-weight: 500;
+      }
+    }
+
+    .special{
+      flex-grow: 15px;
+      background-color: #4eb478;
+      transform: scale(1.1);
+      *{
+        background-color: #4eb478;
+        color: #fff;
+      }
+
+      button{
+        color: #fff;
+        border-color: #fff;
+      }
     }
   }
 }
